data/derived/comb/progs/unify/prog3686.ml.out
Characters 80-100:
  | _  -> n mod 10 :: digitsOfInt( n / 10);;
                      ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type int list
       Type 'a list is not compatible with type int 
